# esticli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: error.rs  main.rs  models.rs  utils.rs
src/app/: actions.rs  details.rs  filter.rs  mod.rs  sort.rs
src/elasticsearch/: client.rs  details.rs  mod.rs  stats.rs  types.rs
src/ui/: chart.rs  details_popup.rs  footer.rs  header.rs  health.rs  help_popup.rs  mod.rs  table.rs  theme.rs  types.rs
